incorrect spacing in css corrected, overlay background now displaying

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,19 +51,29 @@
   background-image: url('../images/soundkiss.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: 50% 50%;
   position: relative;
   width: 100vw;
   height: 100vh;
 }
 
-/*
-#hero-image .overlay {
+
+/* Reference for making hero and overlay work
+
+https://medium.com/@ItsMeDannyZ/code-a-full-width-hero-background-image-with-transparent-overlay-95d757f8ff2c */
+
+.overlay {
   position: absolute;
   width: 100%;
-  height: 100vh;
-  background-color: rgba (0, 0, 0, 0.5);
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-*/
+
 
 
 .welcome {
